--- a/src/components/kanbanColumn/progress/ProgressBar.scss
+++ b/src/components/kanbanColumn/progress/ProgressBar.scss
@@ -1,5 +1,5 @@
 .progress-container {
-  @apply flex items-center;
+  @apply flex items-center justify-between;
 
   progress {
     @apply flex ml-[12px] ;
