--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,12 @@ html{
 
 body{
   /* @apply bg-grey; */
-  overflow-x: hidden;
+  height: 100%;
+  max-height: 100vh;
 }
 .main-container{
+  max-height: 100vh;
   display:  flex;
+  overflow-x: scroll;
+  overflow-y: scroll;
 }
