--- a/src/pages/group/GroupPage.scss
+++ b/src/pages/group/GroupPage.scss
@@ -1,3 +1,3 @@
 .group-page{
-    @apply  grid grid-cols-1 auto-rows-min gap-x-[50px] items-baseline mt-[20px] ml-[20px] sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4;
+    @apply  grid overflow-scroll grid-cols-1 auto-rows-min gap-x-[50px] items-baseline mt-[20px] ml-[20px] sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 ;
 }
