--- a/src/components/sider/Sidebar.scss
+++ b/src/components/sider/Sidebar.scss
@@ -23,7 +23,7 @@
     @apply w-full mt-[30px];
 
     li {
-      @apply rounded-s-[48px] h-[40px] ml-[6px] p-[4px]  bg-transparent flex content-center hover:bg-light transition duration-300 ease-in-out;
+      @apply rounded-s-[48px] ml-[6px] p-[4px]  bg-transparent flex content-center active:bg-light sm:hover:bg-light transition duration-300 ease-in-out;
       a {
         @apply w-full h-full  flex items-center rounded-[48px] text-[16px] text-dark whitespace-nowrap overflow-x-hidden p-[7px];
         transition: all 0.3s ease;
@@ -34,10 +34,7 @@
           @apply text-danger;
         }
         &.toogle {
-          @apply text-primary flex flex-wrap content-center justify-center mb-[10px];
-          i {
-            @apply w-0;
-          }
+          @apply text-primary flex flex-wrap content-center justify-center;
         }
       }
       &.active {
